<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_best_popular_film_and_serials">BEST POPULAR FILM AND SERIALS</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_check_movie_nshow_time">Check Movie\nShow Time</string>
    <string name="lbl_more_show_cases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_show_cases">SHOWCASES</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_rate_movie">RATE MOVIE</string>
    <string name="lbl_actor">ACTORS</string>
    <string name="lbl_creators">CREATORS</string>
    <string name="lbl_more_creators"><u>MORE CREATORS</u></string>
    <string name="lbl_overview">While the Harry Potter movies technically came out first, the Fantastic Beasts timeline is actually set about 70 years prior, with the Secrets of Dumbledore set in the 1930s. Despite the look of the HP movies, the series itself actually begins in the early 90s.</string>
</resources>