<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="Discover"
            app:titleCentered="true"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_large">
            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner">
                </androidx.viewpager2.widget.ViewPager2>
                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_indicator_Banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsCornerRadius="@dimen/margin_small"
                    app:dotsSize="@dimen/margin_medium"
                    app:dotsSpacing="@dimen/margin_small"
                    app:dotsWidthFactor="1.0"
                    android:layout_gravity="bottom|center"
                    app:selectedDotColor="@color/colorAccent"
                    app:progressMode="false"
                    />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularFilmsAndSerials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/flBanner"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/lbl_best_popular_film_and_serials"
                android:textColor="@color/colorSecondaryText"/>
            <include
                android:id="@+id/vpBestActorMovieList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestPopularFilmsAndSerials"
                android:layout_marginTop="@dimen/margin_medium"
                layout="@layout/view_pod_movie_list"/>

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_check_movie_show_time"
                android:layout_below="@+id/vpBestActorMovieList"
                android:layout_marginHorizontal="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    android:text="@string/lbl_check_movie_nshow_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/margin_xxlarge"
                    android:layout_height="@dimen/margin_xxlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_xlarge"
                    android:src="@drawable/ic_baseline_location_on_white_24dp" />
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayoutGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable"
                android:layout_below="@+id/rlCheckMovieShowTime"
                android:layout_marginTop="@dimen/margin_large"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText"
                android:background="@color/colorPrimary"
                />

            <FrameLayout
                android:id="@+id/flMoviesByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tabLayoutGenre"
                android:paddingTop="@dimen/margin_medium_3"
                android:paddingBottom="@dimen/margin_large"
                android:background="@color/colorPrimaryDark">

                <include
                    android:id="@+id/vpMovieListByGenre"
                    layout="@layout/view_pod_movie_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_show_cases"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_below="@+id/flMoviesByGenre"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMoreShowCaseslabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_more_show_cases"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_alignBaseline="@+id/tvShowCaseLabel"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowcase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_medium_2"
                android:layout_below="@id/tvMoreShowCaseslabel"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"/>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvShowcase"
                android:layout_marginTop="@dimen/margin_medium_3"
                layout="@layout/view_pod_actor_list"/>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>